# perch-py

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
src/perch/: cli.py
src/perch/commands/: init.py
