[project]
name = "perch-py"
version = "0.1.0"
description = "🦉 Perch is a developer-friendly CLI tool for scaffolding MCP HexLayer Architecture projects with clean structure and modular design."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = ["typer[all]"]

[project.scripts]
perch = "perch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
