[project]
name = "perch-py"
version = "0.1.0"
description = "Perch is a developer-friendly CLI tool for scaffolding MCP HexLayer Architecture projects with clean structure and modular design."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.5",
    "typer>=0.16.0",
]

[project.scripts]
perch = "perch.cli:app"

